<resources>
    <string name="app_name">Module_Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_repeat_password">Repeat Password</string>
    <string name="text_login">Login</string>
    <string name="text_name">Name</string>
    <string name="text_age">Age</string>
    <string name="text_register">Register</string>
    <string name="text_logout">Logout</string>
    <string name="text_register_here">Register Here</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="title_activity_case_detail_activity">case_detail_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
